frontend/app/src/static/less/layout.less
/* ... */
@padding-vertically-centered: 11px;
@padding-vertically-centered-small-content: 13px;

// 1. Align vertically.
//    textarea is 22px, .group-mixed default height is 44px, use remaining 22px for padding.
//    NOTE: Small textarea is 18px.
// 2. Increase click area by inheriting padding-top and -bottom from .group-mixed--middle.
// 3. Add space between first and last link inside.
// 4. Align search type vertically with first row of search result text inside .group-mixed--middle.
// 5. Increase click area and align vertically with textarea in .group-mixed---middle
//    Star icon wrapper is 24px, .group-mixed default height is 44px, use remaining 20px for padding.
//    NOTE: Star icon height is a combination of @size-icon-star-small and line-height: @grid-vertical-half.
.group-mixed {
  .group-mixed--middle {
    & > a:not(.link-inline) {
      display: block;                               // [2]
      padding-top: inherit;    // [2]
      margin-top: -@padding-vertically-centered;    // [2]
      padding-bottom: inherit; // [2]
      margin-bottom: -@padding-vertically-centered; // [2]
      &:first-of-type:not(:only-of-type) {
        margin-bottom: -@padding-vertically-centered / 2; // [3]
      }
      &:last-of-type:not(:only-of-type) {
        padding-top: 0; // [3]
        margin-top: 0;  // [3]
      }
      &.link-list-item {
        padding-top: @padding-vertically-centered-small-content;    // [1]
        padding-bottom: @padding-vertically-centered-small-content; // [1]
      }
    }
    &.link-search-result + .group-mixed--right > span.text-search-type {
      padding-top: @padding-vertically-centered;    // [4]
      padding-bottom: @padding-vertically-centered; // [4]
    }
  }
  .group-mixed--right span.icon-star.small {
    padding-top: @padding-vertically-centered - 1;    // [5]
    padding-bottom: @padding-vertically-centered + 1; // [5]
  }
}

// FIXME: move (overrides.less)
// 1. Set height for clickable icon inside .group-mixed--left.
// 2. Center vertically. Supports single line, multiline and clamped text.
// 3. Make sure clamped and unclamped span with text inside "a" tag has the same height with display: block.
// 4. Override for .group-mixed.
.group-mixed.vertically-centered {
  .group-mixed--left,
  .group-mixed--right {
    vertical-align: middle; // [4]
  }
  .group-mixed--left {
    & > a > span {
      height: @grid-vertical; // [1]
    }
  }
  .group-mixed--middle {
    padding-top: @padding-vertically-centered;    // [2]
    padding-bottom: @padding-vertically-centered; // [2]
    & > [class^="text-"],
    & > [class*=" text-"] {
      display: block; // [3]
    }
  }
}

@line-height-heading: 70px;
@padding-vertical-heading-text: 17px;
@max-line-height-heading-text: 60px;
@padding-vertical-not-so-large-heading-text: 6px;
@max-line-height-not-so-large-heading-text: 48px;

// 1. Increase line-height for heading.
// 2. Center vertically. We are using .group-mixed--middle and .group-mixed--right in .group-mixed heading
//    or just .group-heading.
// 3. Override for .group-mixed: remove padding-top and padding-bottom defined elsewhere.
.group-mixed.heading {
  & > .group-mixed--middle,
  & > .group-mixed--right {
    line-height: @line-height-heading;  // [1]
    vertical-align: middle;             // [2]
  }
  & > .group-mixed--middle {
    padding-top: 0;     // [3]
    padding-bottom: 0;  // [3]
  }
}

// 1. Align show completed tasks button with heading.
//    Font-size and line-height is different than heading so adjust position correctly.
.group-mixed.heading > .group-mixed--right[task-list-completed] > button {
  margin-top: @margin-top-heading-justified / 2 - 1px;  // [1]
}

// 1. Remove padding-top and padding-bottom defined elsewhere.
// 2. Add equal padding-top and padding-bottom to match, with line-height in .text-heading (=60px),
//    height of .group-heading justified (=94px).
// 3. Maximum line-height to make whole text visible.
// 4. Add equal padding-top and padding-bottom to match, with line-height in .text-heading.long (=48px) and
//    padding-top and padding-bottom in parent, height of .group-heading justified (=94px).
// 5. Expand link element's width and height.
.group-mixed.heading.vertically-centered {
  .group-mixed--middle {
    & > h2.group-heading.justified {
      padding-top: 0;     // [1]
      padding-bottom: 0;  // [1]
      & > a,
      & > div {
        padding-top: @padding-vertical-heading-text;    // [2]
        padding-bottom: @padding-vertical-heading-text; // [2]
        & > span.text-heading {
          line-height: @max-line-height-heading-text;  // [3]
        }
        & > span.text-heading.long {
          line-height: @max-line-height-not-so-large-heading-text;    // [3]
          padding-top: @padding-vertical-not-so-large-heading-text;     // [4]
          padding-bottom: @padding-vertical-not-so-large-heading-text;  // [4]
        }
      }
      & > a {
        display: block; // [5]
      }
    }
  }
}

// 1. Text element inside .group-mixed--middle has line-height of 16px (@grid-vertical-small).
//    Set padding-top and bottom to make .group-mixed.small 30px high.
//    TODO: vertical padding in .group-mixed--middle + negative vertical margin in & > a
// 2. Set smaller height for link inside .group-mixed--right.
// 3. Align with text in .group-mixed--middle.
//    TODO: vertical padding in .group-mixed--middle + negative vertical margin in & > a
.group-mixed.small {
  .group-mixed--middle > a.link-menu-small {
    padding-top: 4px;     // [1]
    padding-bottom: 4px;  // [1]
    & > span.text-navigation-menu-small {
      line-height: @grid-vertical-small;
    }
  }
  .group-mixed--right > a {
    height: @grid-vertical-medium;       // [1]
    line-height: @grid-vertical-medium;  // [1]
    & > span.icon-star.small {
      line-height: @grid-vertical-small;
      padding-top: 4px - 1px;
      padding-bottom: 4px + 1px;
    }
  }
}
/* ... */

